clusters/homelab/apps/devops-tools/nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: devops-tools
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 200
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nexus
          image: sonatype/nexus3:3.68.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http-ui
            - containerPort: 5000
              name: docker
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 2Gi
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data
