clusters/homelab/apps/devops-tools/nexus/docker-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-docker-route
  namespace: devops-tools
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - docker.michaelhomelab.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: nexus-docker-proxy-buffering
      backendRefs:
        - name: nexus
          port: 5000
